Remove reference of google api

--- a/Views/Home/IndexLayout.cshtml
+++ b/Views/Home/IndexLayout.cshtml
@@ -9,8 +9,7 @@
     <script src="Scripts/jquery.signalR-2.0.3.min.js"></script>
     <script src="@(Model.ProxyHost):@(Model.ProxyPort)/signalr/hubs"></script>
 
-    <link rel="stylesheet" href="css/screen.css">
-	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="css/screen.css" />
  
     <script>
         // wait for the DOM to be loaded 
