modify donzens of interface for proxyController

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Index";
 }
 
-<form id="StatusForm">
+<!--form id="StatusForm">
 		<fieldset>
 			<legend>POI Proxy Server Status</legend>
 			<p>
@@ -35,13 +35,13 @@
 
             <p><input class="submit" type="submit" id="submit" name="submit" value="Submit Change" /></p>
 		</fieldset>
-</form>
+</form-->
 
 <form id="LogForm">
     <fieldset>
         <legend>Server Log</legend>
             <p>
-                <textarea id="ServerLog" name="ServerLog" disabled></textarea>
+                <textarea id="ServerLog" name="ServerLog" disabled style="height: 800px;"></textarea>
             </p>
     </fieldset>
 
